--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title_left    : "Planning"
 title_right   : "Techniques" # default: ""
 description   : ""
 keywords      : "Jekyll, theme, free, download, SEO, blog, web, minimalist, thinkspace"
-url           : https://dv367.github.io/thinkspace # site url
+url           : https://dv367.github.io/ # site url
 baseurl       : "" # apply repo name like "/myproject" if used under gh-pages branch, else (under master branch) just leave empty/blank
 cover         : "" # image uri like logo/cover image for site seo
 
