--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description   : "CMU"
 keywords      : "Motion Planning, Planning, Robot Path Planning"
 url           : https://dv367.github.io/thinkspace # site url
 baseurl       : "" # apply repo name like "/myproject" if used under gh-pages branch, else (under master branch) just leave empty/blank
-cover         : "" # image uri like logo/cover image for site seo
+cover         : "/assets/images/cover.png" # image uri like logo/cover image for site seo
 
 google_analytics  : UA-XXXXX-XX
 twitter_username  : ""
