--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ cover         : "/assets/images/cover.png" # image uri like logo/cover image for
 
 google_analytics  : UA-XXXXX-XX
 twitter_username  : ""
-comments_enabled  : false # if enabled (set to true), please provide your disqus_username
-disqus_shortname  : ""
+comments_enabled  : true # if enabled (set to true), please provide your disqus_username
+disqus_shortname  : "dven"
 postshare_enabled : false
 
 # Build settings
