--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ cover         : "/assets/images/cover.png" # image uri like logo/cover image for
 google_analytics  : UA-XXXXX-XX
 twitter_username  : ""
 comments_enabled  : true # if enabled (set to true), please provide your disqus_username
+disqus_username : "dven"
 disqus_shortname  : "dven"
 postshare_enabled : false
 
