--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ google_analytics  : UA-XXXXX-XX
 twitter_username  : ""
 comments_enabled  : true # if enabled (set to true), please provide your disqus_username
 disqus_username : "http://disqus.com/by/vivekadajania"
-disqus_shortname  : "http://disqus.com/by/vivekadajania"
+disqus_shortname  : "https://github.com/dv367/thinkspace"
 postshare_enabled : false
 
 # Build settings
