--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ google_analytics  : UA-XXXXX-XX
 twitter_username  : ""
 comments_enabled  : true # if enabled (set to true), please provide your disqus_username
 disqus_username : "dven940"
-disqus_shortname  : "dven940"
+disqus_shortname  : "https://dv367.github.io/thinkspace"
 postshare_enabled : false
 
 # Build settings
