--- a/_config.yml
+++ b/_config.yml
@@ -8,11 +8,11 @@ baseurl       : "" # apply repo name like "/myproject" if used under gh-pages br
 cover         : "/assets/images/cover.png" # image uri like logo/cover image for site seo
 
 google_analytics  : UA-XXXXX-XX
-twitter_username  : ""
+twitter_username  : "dvenVivek"
 comments_enabled  : true # if enabled (set to true), please provide your disqus_username
 disqus_username : "dven940"
 disqus_shortname  : "https-dv367-github-io-thinkspace"
-postshare_enabled : false
+postshare_enabled : true
 
 # Build settings
 permalink   : /:year/:title/
